--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
