--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "author": "HOAI AN",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.0.1"
   },
   "devDependencies": {
