--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "1.2.3",
+    "axios": "1.3.2",
     "dung_react_scrollbar": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.7.0",
+    "react-router-dom": "6.8.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -39,6 +39,6 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.57.1"
+    "sass": "1.58.0"
   }
 }
