--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.0"
-  },
-  "devDependencies": {}
+  }
 }
