--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,13 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "16.1.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "formidable": "^2.1.1",
     "js-simple-cache": "^1.0.7",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.1.0"
+    "mysql2": "3.3.3"
   }
 }
