--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "16.1.0",
+    "dotenv": "16.1.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "formidable": "^2.1.1",
-    "js-simple-cache": "^1.0.7",
+    "js-simple-cache": "1.2.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "3.3.3"
